--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "templates"
   ],
   "author": "ilyaflare@gmail.com",
-  "license": "ISC",
+  "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/EVERYDAYHERO2000/fast/issues"
   },
